vimから設定を移植

--- a/toml/main.toml
+++ b/toml/main.toml
@@ -1,13 +1,19 @@
 [[plugins]]
-repo = "Shougo/dein.vim"
+repo = 'Shougo/dein.vim'
 
 [[plugins]] # カーソル位置コンテキストに合わせてftを切り替える
-repo = "osyo-manga/vim-precious"
-depends = ["context_filetype.vim"]
+repo = 'osyo-manga/vim-precious'
+depends = ['context_filetype.vim']
 
 [[plugins]] # カーソル位置のコンテキストのftを判定する
-repo = "Shougo/context_filetype.vim"
+repo = 'Shougo/context_filetype.vim'
 
 [[plugins]] # toml syntax
-repo = "cespare/vim-toml"
-on_ft = "toml"
+repo = 'cespare/vim-toml'
+on_ft = 'toml'
+
+[[plugins]] # コピーペースト革命
+repo = 'ConradIrwin/vim-bracketed-paste'
+
+[[plugins]] # カラースキーム革命
+repo = 'flazz/vim-colorschemes'
