--- a/toml/main.toml
+++ b/toml/main.toml
@@ -17,3 +17,11 @@ repo = 'ConradIrwin/vim-bracketed-paste'
 
 [[plugins]] # カラースキーム革命
 repo = 'flazz/vim-colorschemes'
+
+[[plugins]] # コメントアウト革命
+repo = 'tyru/caw.vim'
+hook_add = '''
+    " \cで行の先頭にコメントをつけたり外したりする
+    nmap <Leader>c <Plug>(caw:i:toggle)
+    vmap <Leader>c <Plug>(caw:i:toggle)
+'''
