caw.vimの仕様変更

--- a/toml/main.toml
+++ b/toml/main.toml
@@ -22,6 +22,6 @@ repo = 'flazz/vim-colorschemes'
 repo = 'tyru/caw.vim'
 hook_add = '''
     " \cで行の先頭にコメントをつけたり外したりする
-    nmap <Leader>c <Plug>(caw:i:toggle)
-    vmap <Leader>c <Plug>(caw:i:toggle)
+    nmap <Leader>c <Plug>(caw:hatpos:toggle)
+    vmap <Leader>c <Plug>(caw:hatpos:toggle)
 '''
