--- a/toml/lazy.toml
+++ b/toml/lazy.toml
@@ -22,3 +22,10 @@ hook_source = '''
 [[plugins]] # deoplete source for jedi
 repo = 'zchee/deoplete-jedi'
 on_ft = 'python'
+
+[[plugins]]
+repo ='kannokanno/previm'
+on_ft = 'markdown'
+hook_source = '''
+    let g:previm_open_cmd = 'google-chrome'
+'''
