--- a/toml/lazy.toml
+++ b/toml/lazy.toml
@@ -22,6 +22,7 @@ hook_source = '''
 [[plugins]] # deoplete source for jedi
 repo = 'zchee/deoplete-jedi'
 on_ft = 'python'
+depends = 'deoplete.nvim'
 
 [[plugins]] # deoplete source for c, cpp
 repo = 'zchee/deoplete-clang'
@@ -31,6 +32,12 @@ hook_source = '''
     let g:deoplete#sources#clang#libclang_path = '/usr/lib/llvm-3.8/lib/libclang.so.1'
     let g:deoplete#sources#clang#clang_header = '/usr/include/clang'
 '''
+
+[[plugins]] # deoplete source for vim
+repo = 'Shougo/neco-vim'
+on_ft = 'vim'
+depends = 'deoplete.nvim'
+
 
 [[plugins]]
 repo ='kannokanno/previm'
