--- a/toml/lazy.toml
+++ b/toml/lazy.toml
@@ -38,6 +38,26 @@ repo = 'Shougo/neco-vim'
 on_ft = 'vim'
 depends = 'deoplete.nvim'
 
+[[plugins]] # deoplete source for javascript
+repo = 'carlitux/deoplete-ternjs'
+on_ft = 'javascript'
+depends = 'deoplete.nvim'
+hook_source = '''
+    let g:deople#sources#ternjs#tern_bin = '/usr/bin/tern'
+    let g:deoplete#sources#ternjs#timeout = 1
+    let g:deoplete#sources#ternjs#types = 1
+    let g:deoplete#sources#ternjs#depths = 1
+    let g:deoplete#sources#ternjs#docs = 1
+    let g:deoplete#sources#ternjs#filter = 0
+    let g:deoplete#sources#ternjs#case_insensitive = 1
+    let g:deoplete#sources#ternjs#guess = 0
+    let g:deoplete#sources#ternjs#sort = 0
+    let g:deoplete#sources#ternjs#expand_word_forward = 0
+    let g:deoplete#sources#ternjs#omit_object_prototype = 0
+    let g:deoplete#sources#ternjs#include_keywords = 1
+    let g:deoplete#sources#ternjs#in_literal = 0
+
+'''
 
 [[plugins]]
 repo ='kannokanno/previm'
