--- a/toml/lazy.toml
+++ b/toml/lazy.toml
@@ -9,12 +9,15 @@ hook_source = '''
     let g:deoplete#enable_smart_case = 1
 
     " <TAB>: completion
-    imap <silent><expr> <TAB> pumvisible() ? "\<C-n>" : <SID>check_back_space() ? "\<TAB>" : deoplete#mappings#manual_complete()
-    function! s:check_back_space() abort
-        let col = col('.') - 1
-        return !col || getline('.')[col - 1]  =~ '\s'
-    endfunction
-
+	inoremap <silent><expr> <TAB>
+    \ pumvisible() ? "\<C-n>" :
+    \ <SID>check_back_space() ? "\<TAB>" :
+    \ deoplete#mappings#manual_complete()
+    function! s:check_back_space() abort "{{{
+    let col = col('.') - 1
+    return !col || getline('.')[col - 1]  =~ '\s'
+    endfunction"}}}
+ "
     " <S-TAB>: completion back.
     inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
 '''
@@ -25,12 +28,12 @@ on_ft = 'python'
 depends = 'deoplete.nvim'
 
 [[plugins]] # deoplete source for c, cpp
-repo = 'zchee/deoplete-clang'
+repo = 'deoplete-plugins/deoplete-clang'
 on_ft = ['c', 'cpp']
 depends = 'deoplete.nvim'
 hook_source = '''
-    let g:deoplete#sources#clang#libclang_path = '/usr/lib/llvm-6.0/lib/libclang.so.1'
-    let g:deoplete#sources#clang#clang_header = '/usr/include/clang'
+    let g:deoplete#sources#clang#libclang_path = '/usr/lib/llvm-8/lib/libclang.so'
+    let g:deoplete#sources#clang#clang_header = '/usr/include/clang/8/include'
 '''
 
 [[plugins]] # deoplete source for vim
