--- a/toml/lazy.toml
+++ b/toml/lazy.toml
@@ -6,7 +6,7 @@ on_event = 'InsertEnter'
 hook_source = '''
     let g:deoplete#enable_at_startup = 1
     let g:deoplete#enable_ignore_case = 1
-    let g:deoplete#enable_smart_case = 1
+    " let g:deoplete#enable_smart_case = 1
 
     " <TAB>: completion
 	inoremap <silent><expr> <TAB>
